--- a/attendance_tracker/templates/add_club.html
+++ b/attendance_tracker/templates/add_club.html
@@ -2,26 +2,39 @@
 
 {% block title %}Add Club Page{% endblock %}
 {% block content %}
-<div class="flex-1 max-w-7xl mx-auto px-6 py-8 w-full">
-    <div class="flex justify-center mt-10">
-        <form method="POST" action="/h/admin/add-club" class="text-black">
-            <label for="club_name">Club Name:</label><br>
-            <input type="text" name="club_name" id="club_name" class="p-1 border border-black rounded-xl text-black" required><br><br>
+<main class="flex-1 max-w-7xl w-full mx-auto">
 
-             <label for="club_president">Club President:</label><br>
-            <input type="text" name="club_president" id="club_president" class="p-1 border border-black rounded-xl text-black" required><br><br>
+    <div class="w-full max-w-xl p-8 mt-16 mx-auto bg-white rounded-2xl shadow-2xl">
+        <h1 class="text-2xl font-bold text-gray-900 mb-4">Add Club</h1>
 
-             <label for="club_email">Club Email:</label><br>
-            <input type="text" name="club_email" id="club_email" class="p-1 border border-black rounded-xl text-black" required><br><br>
+        <form method="POST" action="/h/admin/add-club" class="text-gray-900 space-y-2">
+            <div class="grid grid-rows-6 gap-4">
 
-             <label for="club_size">Club Size:</label><br>
-            <input type="text" name="club_size" id="club_size" class="p-1 border border-black rounded-xl text-black" required><br><br>
-
-             <label for="club_advisor">Club Advisor:</label><br>
-            <input type="text" name="club_advisor" id="club_advisor" class="p-1 border border-black rounded-xl text-black" required><br><br>
-
-             <label for="club_advisor_email">Advisor Email:</label><br>
-            <input type="text" name="club_advisor_email" id="club_advisor_email" class="p-1 border border-black rounded-xl text-black" required><br><br>
+                <div>
+                    <label for="club_name" class="block mb-1">Club Name:</label>
+                    <input type="text" name="club_name" id="club_name" class="w-full py-2 px-4 border border-gray-200 rounded-md text-gray-900 focus:ring-2 focus:ring-cougar-crimson outline-none" required>
+                </div>
+                <div>
+                    <label for="club_president" class="block mb-1">Club President:</label>
+                    <input type="text" name="club_president" id="club_president" class="w-full py-2 px-4 border border-gray-200 rounded-md text-gray-900 focus:ring-2 focus:ring-cougar-crimson outline-none" required>
+                </div>
+                <div>
+                    <label for="club_email" class="block mb-1">Club Email:</label>
+                    <input type="email" name="club_email" id="club_email" class="w-full py-2 px-4 border border-gray-200 rounded-md text-gray-900 focus:ring-2 focus:ring-cougar-crimson outline-none" required>
+                </div>
+                <div>
+                    <label for="club_size" class="block mb-1">Club Size:</label>
+                    <input type="number" name="club_size" id="club_size" class="w-full py-2 px-4 border border-gray-200 rounded-md text-gray-900 focus:ring-2 focus:ring-cougar-crimson outline-none" required>
+                </div>
+                <div>
+                    <label for="club_advisor" class="block mb-1">Club Advisor:</label>
+                    <input type="text" name="club_advisor" id="club_advisor" class="w-full py-2 px-4 border border-gray-200 rounded-md text-gray-900 focus:ring-2 focus:ring-cougar-crimson outline-none" required>
+                </div>
+                <div>
+                    <label for="club_advisor_email" class="block mb-1">Advisor Email:</label>
+                    <input type="email" name="club_advisor_email" id="club_advisor_email" class="w-full py-2 px-4 border border-gray-200 rounded-md text-gray-900 focus:ring-2 focus:ring-cougar-crimson outline-none" required>
+                </div>
+            </div>
 
             <!-- submit button -->
             <div class="flex justify-center pt-4">
@@ -33,5 +46,5 @@
             </div>
         </form>
     </div>
-</div>
+</main>
 {% endblock %}
