--- a/attendance_tracker/templates/admin_home.html
+++ b/attendance_tracker/templates/admin_home.html
@@ -54,7 +54,7 @@
                 <a href="{{ url_for('admin.display_admin_emails') }}"
                     class="bg-cougar-red hover:bg-cougar-crimson rounded-lg shadow p-6 hover:shadow-lg transition-all">
                     <div class="flex items-center justify-center m-4 font-semibold">
-                        <h3 class="text-white text-2xl text-center">Email list</h3>
+                        <h3 class="text-white text-2xl text-center">Communication</h3>
                     </div>
                 </a>
             </div>
