--- a/attendance_tracker/templates/assign_club.html
+++ b/attendance_tracker/templates/assign_club.html
@@ -11,22 +11,24 @@
             <!-- building name form -->
             <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Building name:</label>
-                <input name="building_name" id="building_name" type="text" class="w-full px-4 py-2 border mb-4 border-gray-300 rounded-lg focus:ring-2 focus:ring-cougRed focus:border-cougCrimson text-black outline-none transition-all"
+                <input name="building" id="building" type="text" class="w-full px-4 py-2 border mb-4 border-gray-300 rounded-lg focus:ring-2 focus:ring-cougRed focus:border-cougCrimson text-black outline-none transition-all"
                 placeholder="Dana"required />
             </div>
 
             <!-- room number form -->
             <div>
                 <label class="block text-sm font-[Proxima Nova] text-gray-700 mb-1">Room number:</label>
-                <input name="room_num" id="room_num" type="password" class="w-full px-4 py-2 border mb-4 border-gray-300 rounded-lg focus:ring-2 focus:ring-cougRed focus:border-cougCrimson text-black outline-none transition-all"
+                <input name="room_num" id="room_num" type="number" class="w-full px-4 py-2 border mb-4 border-gray-300 rounded-lg focus:ring-2 focus:ring-cougRed focus:border-cougCrimson text-black outline-none transition-all"
                 placeholder="216" required />
             </div>
 
             <!-- dropdown for club options -->
             <label for="" class="block text-sm font-medium text-gray-700 mb-1">Club:</label>
-            <select name="duration" id="duration-select" class="w-full px-4 py-2 border mb-4 border-gray-300 rounded-lg focus:ring-2 focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
-                <option value="Custom" class="mt-1.5 w-full rounded-lg border bg-white">Select a club</option>
-                <!-- TODO [Ingrid]: write loop for club options -->
+            <select name="assigned_club" id="assigned_club" class="w-full px-4 py-2 border mb-4 border-gray-300 rounded-lg focus:ring-2 focus:ring-cougar-crimson focus:border-cougar-crimson outline-none">
+                 <option value="">Select a club</option>
+                    {% for club_name in club %}
+                        <option value="{{ club_name }}">{{ club_name }}</option>
+                    {% endfor %}
             </select>
 
             <!-- submit button -->
