--- a/attendance_tracker/templates/club_config.html
+++ b/attendance_tracker/templates/club_config.html
@@ -2,29 +2,31 @@
 {% block title %} Clubs {% endblock %}
 
 {% block content %}
-<main class="flex-1 max-w-7xl mx-auto px-6 py-8 w-full">
-  <form action="{{ url_for('admin.club_config', club_name=club_name) }}" method="post" class="space-y-6">
-    Club configuration
-    <div class="">
-      <div>
-        {% for field in club %}
-        <div class="flex items-center justify-between space-x-2">
-          <label for="{{ field }}" class="flex-1 text-lg font-[Proxima Nova] text-gray-700">
-            {{ field }}
-          </label>
-          <input
-            id="{{ field }}"
-            name="{{ field }}"
-            type="text"
-            class="min-w-0 flex-1 border border-gray-300 rounded-md px-3 py-2 text-gray-800 focus:outline-none focus:ring-2 focus:ring-cougCrimson focus:border-transparent transition duration-150"
-          >
-      </div>
-        {% endfor %}
+<main class="flex-1 max-w-7xl mx-auto px-6 py-8">
 
-    <button type="submit" class="button-element">
-      Save changes
-    </button>
-  </form>
+  <div class="w-full max-w-2xl mx-auto">
+    <h1 class="text-2xl font-bold text-gray-900 mb-4">Edit Club</h1>
+
+    <div class="bg-white rounded-2xl shadow-2xl p-8">
+    <form action="{{ url_for('admin.club_config', club_name=club_name) }}" method="post" class="space-y-4">
+
+      {% for field in club %}
+        <div>
+            <label for="" class="block mb-1 text-gray-900 font-md">
+              Current value: {{ field }}
+            </label>
+
+            <input id="{{ field }}" name="{{ field }}" type="text"
+              class="w-full py-2 px-4 border border-gray-200 rounded-md text-gray-900 focus:ring-2 focus:ring-cougar-crimson focus:border-cougar-crimson outline-none" required>
+        </div>
+      {% endfor %}
+        <div class="flex items-center justify-between space-x-2">
+        <button type="submit"
+            class="w-full md:w-auto bg-cougar-red text-white px-6 py-2 rounded-lg
+            hover:bg-cougar-crimson transition-colors font-medium"> Submit
+        </button>
+    </form>
+  </div>
 </main>
 
 {% endblock %}
