--- a/attendance_tracker/templates/club_search.html
+++ b/attendance_tracker/templates/club_search.html
@@ -2,27 +2,33 @@
 {% block title %} Clubs {% endblock %}
 
 {% block content %}
-<div class="flex justify-center overflow-auto" >
-    <table class="table-auto bg-white text-black text-lg border-collapse border rounded-lg" >
-        <thead>
-            <tr>
-                <th scope="col" class="border border-black text-center p-2">Building</th>
-                <th scope="col" class="border border-black text-center p-2">Room Number</th>
-                <th scope="col" class="border border-black text-center p-2">Assigned Club</th>
-                <th scope="col" class="border border-black text-center p-2"></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for building, room, club in clubs %}
-            <tr>
-                <th scope="row">{{building}}</th>
-                <th>{{room}}</th>
-                <th>{{club}}</th>
-                <th><a class="text-blue-600 hover:text-blue-800 transition-colors duration-200 p-4" href="{{ url_for('admin.club_config', club_name=club) }}">edit</a></th>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+<main class="flex-1 max-w-7xl mx-auto px-6 py-8">
+    <div class="w-full max-w-4xl mx-auto" >
+        <h1 class="text-2xl font-bold text-gray-900 mb-4">Clubs</h1>
+        <div class="bg-white rounded-2xl shadow-2xl overflow-hidden">
+            <table>
+                <thead>
+                    <tr>
+                    <th class="px-6 py-3 text-left text-gray-900 font-semibold">Building</th>
+                    <th class="px-6 py-3 text-left text-gray-900 font-semibold">Room Number</th>
+                    <th class="px-6 py-3 text-left text-gray-900 font-semibold">Assigned Club</th>
+                    <th class="px-6 py-3 text-left text-gray-900 font-semibold"></th>
+                    </tr>
+                </thead>
+                <tbody class="divide-y divide-gray-200">
+                {% for building, room, club in clubs %}
+                <tr class="hover:bg-gray-50 transition-colors">
+                    <td class="px-6 py-4 text-gray-900">{{building}}</td>
+                    <td class="px-6 py-4 text-gray-900">{{room}}</td>
+                    <td class="px-6 py-4 text-gray-900">{{club}}</td>
+                    <td><a class="text-cougar-red hover:text-cougar-red transition-colors duration-200 p-4" href="{{ url_for('admin.club_config', club_name=club) }}">edit</a></th>
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+    </div>
+</main>
 
 {% endblock %}
